DSND-2810: Fix sonar issues